--- a/code/dcm_ovs/templates/upload/upload.html
+++ b/code/dcm_ovs/templates/upload/upload.html
@@ -98,7 +98,7 @@ $(document).ready(function(){
 	}
     function uploadFile(fileItem){
         var data = {
-		url:'http://ss.dcm-ovs.com/upload/',
+		url:'http://ss.dcm-ovs.com:8080/upload/',
         };
 
         $.ajax({
