interface bootsrtup dcm-ovs.com after review badr

--- a/code/dcm_ovs/templates/base.html
+++ b/code/dcm_ovs/templates/base.html
@@ -1,41 +1,52 @@
 {% load staticfiles %}
 
 <!DOCTYPE html>
-<html>
+
+
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{% block head_title %}DCM-OVS{% endblock head_title %}</title>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<title>{% block head_title %}DCM-OVS{% endblock head_title %}</title>
 
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+	<style>
+	@font-face {
+    font-family: AppleFont;
+    src: url(/static/font/text.ttf);
+	}
+	BODY {
+    font-family: AppleFont, sans-serif !important;
+    font-weight: lighter;
+	}
+	{% block style %}{% endblock style %}
+	</style>
 
-<style>
-{% block style %}{% endblock style %}
-</style>
-
-{% block head_extra %} {% endblock head_extra %}
+	{% block head_extra %} {% endblock head_extra %}
 
 </head>
 
 <body>
 
-	{% if user.is_authenticated %}
-		<p>Welcome, {{ user.username }}. Thanks for logging in.</p>
-	{% else %}
-		<p>Welcome, new user. Please log in.</p>
-	{% endif %}
-	
+
+	{% include "include/header.html" %}
+	<main role="main" class="container">
 	{% block content %}{% endblock content %}
+	</main>
+	{% include "include/footer.html" %}
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+	{% block script %}{% endblock script %}
 
-{% block script %}{% endblock script %}
+</div>
 </body>
 
 </html> 
