--- a/code/dcm_ovs/templates/upload/upload.html
+++ b/code/dcm_ovs/templates/upload/upload.html
@@ -4,162 +4,62 @@
 {{ title }} | {{ block.super }}
 {% endblock head_title %}
 
+{% block style %}
+    #deposer {
+        border: 4px dashed #ccc;
+        border-radius: 2px;
+        padding: 20px;
+        margin: 30px;
+        
+    }
+    #deposer > .bigTxt {
+        color: #ccc;
+        font-size: 1.5em;
+    }
+
+    #deposer > .smallTxt {
+        margin-bottom:0;
+        color: #ddd;
+        font-size: 1em;
+    }
+    #deposer  > i{
+        margin: 10px;
+        padding: 10px;
+        color: #ddd;
+        font-size:6em;
+        
+    }
+{% endblock style %}
 
 {% block content %}
- <form action="" method="POST">
- 	{% csrf_token %}
-	Select a Video: <input type="file" accept='video/*' name="video" class="upload-video">
-  <input type="submit" value="upload">
-</form> 
 
 
+ 
+<div class='container uploading-queue'>
+<!-- <div class="media">
+  <img class="mr-3" src="/static/account.png" alt="Generic placeholder image">
+  <div class="media-body">
+    <h5 class="mt-0">Media heading</h5>
+    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+  </div>
+</div> -->
+</div>
+<div class="row" id="upload">
+    <div class="col-xs-2 col-sm-3 col-md-4 "></div>
+        <div class="col-xs-8 col-sm-6 col-md-4 text-center"  id="deposer">
+            <p class="bigTxt">Drag and drop video files</p>
+            <i class="material-icons">file_upload</i>
+            <p class="smallTxt">Or you can also..</p>
+            <label id="import-manual-trigger" class="btn-link" style="cursor:pointer">
+                Select files manually
+                <input type="file" name="fileToUpload" class="upload-video" id="file-select" enctype="multipart/form-data" accept='video/*'  style="position: fixed;right: -1000px;" multiple>
+            </label>
+        </div>
+    <div class="col-xs-2 col-sm-3 col-md-4 "></div> 
+</div>
 
 {% endblock content %}
 
 {% block script %}
-<script>
-$(document).ready(function(){
-
-    // setup session cookie data. This is Django-related
-    function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-                var cookie = jQuery.trim(cookies[i]);
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
-    var csrftoken = getCookie('csrftoken');
-
-    function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            }
-        }
-    });
-    // end session cookie data setup. 
-
-
-	// auto-upload on file input change.
-	$(document).on('change','.upload-video', function(event){
-	    var selectedVideo = $(this).prop('files')[0];
-	    	alert(selectedVideo)
-	        var video = verifyVideo(selectedVideo)
-	        if (video){
-	            uploadFile(video)
-	        } else {
-	             alert("file selected is not allowed video.")
-	        }
-	    });
-
-	function verifyVideo(file){
-	    // verifies the file extension is one we support.
-	    var extension = file.name.split('.').pop().toLowerCase(); //file.substr( (file.lastIndexOf('.') +1) );
-	    switch(extension) {
-	        case 'mov':
-	        case 'mp4':
-	        case 'mpeg4':
-	        case 'avi':
-            case 'webm':
-	            return file
-
-	        default:
-	            //snotAllowedFiles.push(file)
-	            return null
-	    }
-	}
-    
-    function constructFormData(data, fileItem) {
-		var contentType = fileItem.type
-		var filename = data.filename
-		//var repsonseUser = data.user
-		var keyPath = 'www/' + '/' + filename
-		// var keyPath = policyData.file_bucket_path
-		var fd = new FormData()
-		fd.append('key', keyPath + filename);
-		// fd.append('acl','private');
-		fd.append('Content-Type', contentType);
-		fd.append("uuid", data.uuid)
-		fd.append('filename', filename);
-		fd.append('file', fileItem);
-		return fd
-	}
-
-    function uploadFile(fileItem){
-        var data = {
-            // add to setting url to simplify editing
-		url:'http://ss.dcm-ovs.com:8080/upload/',
-        };
-
-        $.ajax({
-            type:"POST",
-            data: { // TODO: send to server side file name and maybe md5 of file also type mime and size
-                filename: fileItem.name
-            },
-            url: "{% url 'upload:upload' %}",
-            dataType : "json",
-            success: function(revievedData){
-                    alert("success: "+ revievedData.uuid)
-                    data.uuid = revievedData['uuid']
-                    // data.uuid = '4513f29b-ee91-4656-86de-70e8aca88959'
-                    // data.uuid = $.parseJSON(revievedData)[0].fields.uuid
-            },
-            error: function(data){
-                alert("An error occured, please try again later")
-            }
-        }).done(function(){
-            // construct the needed data
-            var fd = constructFormData(data, fileItem)
-
-            // use XML http Request to Send to AWS. 
-            var xhr = new XMLHttpRequest()
-
-            // construct callback for when uploading starts
-            // xhr.upload.onloadstart = function(event){
-            //     var inLoadingIndex = $.inArray(fileItem, fileItemList)
-            //     if (inLoadingIndex == -1){
-            //         // Item is not loading, add to inProgress queue
-            //         newLoadingItem = {
-            //             file: fileItem,
-            //             id: policyData.file_id,
-            //             order: fileItemList.length + 1
-            //         }
-            //         fileItemList.push(newLoadingItem)
-            //       }
-            //     fileItem.xhr = xhr
-            // }
-
-            // Monitor upload progress and attach to fileItem.
-            xhr.upload.addEventListener("progress", function(event){
-                if (event.lengthComputable) {
-                 var progress = Math.round(event.loaded / event.total * 100);
-                    fileItem.progress = progress
-                    console.log("progress = "+ progress)
-                }
-            })
-
-            xhr.upload.addEventListener("load", function(event){
-                console.log("Complete")
-                // handle FileItem Upload being complete.
-                // fileUploadComplete(fileItem, policyData)
-
-            })
-
-            xhr.open('POST', data.url , true);
-            xhr.send(fd);
- })
-}});
- </script>
+<script src="/static/js/upload.js"></script>
 {% endblock script %}
