add nginx request auth

--- a/code/dcm_ovs/templates/upload/upload.html
+++ b/code/dcm_ovs/templates/upload/upload.html
@@ -52,7 +52,7 @@
             <p class="smallTxt">Or you can also..</p>
             <label id="import-manual-trigger" class="btn-link" style="cursor:pointer">
                 Select files manually
-                <input type="file" name="fileToUpload" class="upload-video" id="file-select" enctype="multipart/form-data" accept='video/*'  style="position: fixed;right: -1000px;" multiple>
+                <input type="file" name="fileToUpload" class="upload-video" id="file-select" enctype="multipart/form-data" accept='video/mp4,video/x-m4v,video/*'  style="position: fixed;right: -1000px;" multiple>
             </label>
         </div>
     <div class="col-xs-2 col-sm-3 col-md-4 "></div> 
