--- a/code/ss/templates/oauth/addOauthApp.html
+++ b/code/ss/templates/oauth/addOauthApp.html
@@ -1,5 +1,5 @@
 
-<form action="{% url 'upload:gettokens'%}" method="post">
+<form action="{% url 'oauth:gettokens'%}" method="post">
 {% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
