--- a/code/ss/templates/oauth/OauthApp.html
+++ b/code/ss/templates/oauth/OauthApp.html
@@ -8,5 +8,5 @@ here OAuth app exist
 <li> Refresh token : {{ oauthAppObject.refresh_token}} </li>
 {% endif %}
 </ul>
-<a href="{% url 'upload:deleteOauthApp' %}"><button type="button">Delete</button></a>
+<a href="{% url 'oauth:deleteOauthApp' %}"><button type="button">Delete</button></a>
 <a href="http://dcm-ovs.com/o/authorize/?client_id={{ oauthAppObject.client_id}}&response_type=code&state=random_state_string" > Authorize secure storage to access your account</a>
