using nginx progress with the first 100% bug

--- a/code/dcm_ovs/templates/include/footer.html
+++ b/code/dcm_ovs/templates/include/footer.html
@@ -1,7 +1,6 @@
-
- <footer class="footer navbar-fixed-bottom">
- 	<hr>
-      <div class="container text-center">
+<footer class="footer">
+    <div class="container text-center">
+        <hr>
         <span class="text-muted">&copy; Copyright 2018 <a href="http://mosaic-lab.org">MOSAIC Lab</a></span>
-      </div>
+    </div>
 </footer>
