--- a/code/dcm_ovs/templates/base.html
+++ b/code/dcm_ovs/templates/base.html
@@ -6,47 +6,67 @@
 <html lang="en">
 <head>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>{% block head_title %}DCM-OVS{% endblock head_title %}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <title>{% block head_title %}DCM-OVS{% endblock head_title %}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-	<style>
-	@font-face {
-    font-family: AppleFont;
-    src: url(/static/font/text.ttf);
-	}
-	BODY {
-    font-family: AppleFont, sans-serif !important;
-    font-weight: lighter;
-	}
-	{% block style %}{% endblock style %}
-	</style>
+    <style>
+        @font-face {
+            font-family: AppleFont;
+            src: url(/static/font/text.ttf);
+        }
 
-	{% block head_extra %} {% endblock head_extra %}
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+
+        BODY {
+            font-family: AppleFont, sans-serif !important;
+            font-weight: lighter;
+            margin-bottom: 60px;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 120px; /* Set the fixed height of the footer here */
+            line-height: 60px; /* Vertically center the text there */
+            background-color: #f5f5f5;
+        }
+
+        {% block style %}{% endblock style %}
+    </style>
+
+    {% block head_extra %} {% endblock head_extra %}
 
 </head>
 
 <body>
 
 
-	{% include "include/header.html" %}
-	<main role="main" class="container">
-	{% block content %}{% endblock content %}
-	</main>
-	{% include "include/footer.html" %}
+{% include "include/header.html" %}
+<main role="main" class="container">
+    {% block content %}{% endblock content %}
+</main>
+{% include "include/footer.html" %}
 
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
 
-	{% block script %}{% endblock script %}
+{% block script %}{% endblock script %}
 
-</div>
 </body>
 
 </html> 
