--- a/code/dcm_ovs/templates/oauth2_provider/authorize.html
+++ b/code/dcm_ovs/templates/oauth2_provider/authorize.html
@@ -26,7 +26,7 @@
                 {{ form.errors }}
                 {{ form.non_field_errors }}
 
-                 <div class="btn-group" role="group" >
+                 <div class="btn-toolbar">
                 <input type="submit" class="btn btn-large"  value="Cancel" >
                 <input type="submit" class="btn btn-large btn-primary"  name="allow" value="Authorize" >
                 </div>
