--- a/code/ss/templates/oauth/addOauthApp.html
+++ b/code/ss/templates/oauth/addOauthApp.html
@@ -1,6 +1,52 @@
+{% extends "base.html" %}
+{% load widget_tweaks %}
+{% block content %}
 
-<form action="{% url 'oauth:gettokens'%}" method="post">
-{% csrf_token %}
-{{ form.as_p }}
-<input type="submit" value="Submit" />
-</form>
+    <div class="container border">
+        <form class="form-horizontal" method="post" action="{% url 'oauth:gettokens' %}">
+
+            <h3 class=" my-4 ml-2 font-weight-bold ">Register a new application</h3>
+
+            <div class=" m-4">
+
+                {% csrf_token %}
+
+                {% for field in form %}
+                    <div class="form-group">
+                        <label for="{{ field.id_for_label }}" class="font-weight-bold lead">{{ field.label }}</label>
+                        {% if form.is_bound %}
+                            {% if field.errors %}
+                                {% render_field field class="form-control is-invalid" %}
+                                {% for error in field.errors %}
+                                    <div class="invalid-feedback">
+                                        {{ error }}
+                                    </div>
+                                {% endfor %}
+                            {% else %}
+                                {% render_field field class="form-control is-valid" %}
+                            {% endif %}
+                        {% else %}
+                            {% render_field field class="form-control" %}
+                        {% endif %}
+                    </div>
+
+                {% endfor %}
+
+                <div class="control-group {% if form.non_field_errors %}error{% endif %}">
+                    {% for error in form.non_field_errors %}
+                        <span class="help-inline">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </form>
+    </div>
+
+{#    <form action="{% url 'oauth:gettokens' %}" method="post">#}
+{#        {% csrf_token %}#}
+{#        {{ form.as_p }}#}
+{#        <input type="submit" value="Submit"/>#}
+{#    </form>#}
+
+
+{% endblock %}
