--- a/code/ss/templates/oauth/deleteOauthApp.html
+++ b/code/ss/templates/oauth/deleteOauthApp.html
@@ -1,7 +1,20 @@
-<form action="{% url 'oauth:deleteOauthApp'%}" method="post">
-{% csrf_token %}
-{{ form.as_p }}
-<p>Delete all Oauth app?</p>
-<input type="submit" value="Delete" />
-<a href="{%url 'oauth:gettokens'%}"><button type="button">Cancel</button></a>
-</form>
+{% extends "base.html" %}
+
+{% block content %}
+
+    <div class="block-center">
+        <h3 class="block-center-heading">Are you sure to delete the application ?</h3>
+        <form action="{% url 'oauth:deleteOauthApp' %}" method="post">
+            {% csrf_token %}
+
+            <div class="control-group">
+                <div class="controls">
+                    <a class="btn btn-large" href="{% url 'oauth:gettokens' %}">Cancel</a>
+                    <input type="submit" class="btn btn-large btn-danger" name="allow" value="Delete"/>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+{% endblock %}
