--- a/code/ss/templates/registration/login.html
+++ b/code/ss/templates/registration/login.html
@@ -2,37 +2,51 @@
 
 {% block content %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
+    <div class="col-md-4 ">
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+        {% if form.errors %}
+            <p>Your username and password didn't match. Please try again.</p>
+        {% endif %}
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
+        {% if next %}
+            {% if user.is_authenticated %}
+                <p>Your account doesn't have access to this page. To proceed,
+                    please login with an account that has access.</p>
+            {% else %}
+                <p>Please login to see this page.</p>
+            {% endif %}
+        {% endif %}
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+
+            <div class="form-group input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text"><i class="material-icons">perm_identity</i></div>
+                </div>
+                <input type="text" name="username" class="form-control" id="inlineFormInputGroup"
+                       placeholder="Username">
+            </div>
+
+
+            <div class="form-group input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text"><i class="material-icons">lock_outline</i></div>
+                </div>
+                <input type="password" name="password" class="form-control " placeholder="Password">
+            </div>
+
+
+            <input class="btn btn-light" type="submit" value="Sign in"/>
+            <input type="hidden" name="next" value="{{ next }}"/>
+        </form>
+
+        {# Assumes you setup the password_reset view in your URLconf #}
+        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+
+    </div>
+
+
 
 {% endblock %}
