--- a/code/ss/templates/oauth/OauthApp.html
+++ b/code/ss/templates/oauth/OauthApp.html
@@ -48,7 +48,7 @@
 
                 {% if not oauthAppObject.access_token %}
                 <a class="btn btn-success "
-                   href="http://dcm-ovs.com/o/authorize/?client_id={{ oauthAppObject.client_id }}&response_type=code&state=random_state_string">Authorize</a>
+                   href="http://172.20.10.3/o/authorize/?client_id={{ oauthAppObject.client_id }}&response_type=code&state=random_state_string">Authorize</a>
                 {% endif %}
 
             </div>
